# SurveySubmitter

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SurveyController.py  cli.py  config.example.yaml  pyproject.toml  pytest.ini  survey_wFJsDQ4.yaml  test_survey.yaml
.github/workflows/: build-release-installer.yml  package-smoke.yml  python-fast-ci.yml  python-gate-ci.yml  velopack-e2e-update.yml
.qoder/: settings.local.json
CI/: python_ci.py
CI/live_tests/: run_async_engine_once.py  run_velopack_e2e.py  test_live_runtime_regression.py  test_velopack_e2e.py
CI/python_checks/: common.py  compile_check.py  import_check.py  pyright_check.py  ruff_check.py  ty_check.py  unit_test_check.py  window_smoke_check.py
CI/release_tools/: trim_velopack_feed.py
CI/unit_tests/: conftest.py  test_action_logger.py  test_ai_protocols.py  test_cli.py  test_http_client.py  test_ip_usage_log.py  test_log_utils.py  test_log_utils_concurrency.py  test_proxy_api_provider.py  test_proxy_area_service.py  test_proxy_policy_source.py  test_proxy_pool.py  test_python_ci_common.py  test_random_ip_session_auth.py  test_random_ip_session_client.py  test_random_ip_session_normalize.py  test_session_policy.py  test_submission_report.py  test_system_helpers.py  test_update_ci_probe.py  test_updater.py  test_velopack_e2e_runner.py  test_velopack_feed_trim.py
Setup/: build-release-installer.ps1
Setup/LICENSE/: after_install.txt  before_install.txt
assets/: reverse_fill_example.xlsx
credamo/provider/: answering_builders.py  http_runtime.py  parser.py
software/app/: config.py  frozen_runtime.py  main.py  path_utils.py  runtime_paths.py  settings_store.py  user_paths.py
software/assets/: area.txt
software/integrations/: __init__.py
software/logging/: log_utils.py
software/network/: session_policy.py  submission_report.py
software/providers/: adapter_base.py  common.py  contracts.py  hooks.py  http_logic.py  http_progress.py  registry.py  runtime_state.py
software/system/: device_fingerprint.py  power_management.py  registry_manager.py  secure_store.py
wjx/: __init__.py
(+505 files in other folders)
