[project]
name = "surveycontroller"
version = "3.2.0"
description = "SurveyController CLI tool"
readme = "README.md"
requires-python = ">=3.13.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.27,<1",
    "keyring>=25,<26; sys_platform == 'darwin'",
    "packaging",
    "py-yaml12",
    "pydantic>=2.0",
    "python-calamine",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 100
