[project]
name = "surveycontroller"
version = "3.2.0"
description = "SurveyController desktop application"
readme = "README.md"
requires-python = ">=3.13.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.27,<1",
    "keyring>=25,<26; sys_platform == 'darwin'",
    "openpyxl",
    "packaging",
    "PySide6==6.11.1",
    "PySide6-Fluent-Widgets==1.11.2",
    "velopack>=1.2.0; sys_platform == 'win32'",
    "zxing-cpp",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.17",
]
build = [
    "nuitka>=4.1.2,<5",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
line-length = 100
