[project]
name = "surveysubmitter"
version = "1.1.0a0"
description = "SurveyController CLI tool"
readme = "README.md"
requires-python = ">=3.13.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.27,<1",
    "openai>=1.40.0",
    "packaging",
    "py-yaml12",
    "pydantic>=2.0",
    "python-calamine",
]

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
    "xlsxwriter",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 100
